project(PagePreviewPlugin)

find_package(KDE4 REQUIRED)
find_package(KDevPlatform REQUIRED)


#INCLUDE_DIRECTORIES(${KDE4_INCLUDES} ${KDEVPLATFORM_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTWEBKIT_INCLUDE_DIR})

include_directories(
    ${KDEVPLATFORM_INCLUDE_DIR}
    ${KDE4_INCLUDES}
    ${QT_QTCORE_INCLUDE_DIR}
    ${QT_QTWEBKIT_INCLUDE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

kde4_add_plugin(PagePreviewPlugin PagePreviewPlugin.cpp PagePreviewWebView.cpp)
#target_link_libraries(PagePreviewPlugin ${KDE4_KDECORE_LIBRARY} ${KDEVPLATFORM_INTERFACES_LIBRARIES} ${KDETEXTEDITOR_EXPORT_LIBRARY} ${QT_QTWEBKIT_LIBRARY})

target_link_libraries(PagePreviewPlugin 
    ${KDE4_KDEUI_LIBS} 
    ${KDE4_KDECORE_LIBRARY}
    ${KDEVPLATFORM_INTERFACES_LIBRARIES}
    ${QT_QTWEBKIT_LIBRARY}
    ${KDETEXTEDITOR_EXPORT_LIBRARY} 
    ${KDEVPLATFORM_OUTPUTVIEW_LIBRARIES})

install(TARGETS PagePreviewPlugin
DESTINATION ${INCLUDE_INSTALL_DIR}/PagePreviewPlugin COMPONENT Devel)

install(FILES Web_Page_Preview.desktop DESTINATION ${SERVICES_INSTALL_DIR})
